# hackathon2022

api/: README.md  pyproject.toml
api/src/: alembic.ini
api/src/app/: db.py  main.py  settings.py
api/src/app/api/: __init__.py
api/src/app/api/models/: models.py
api/src/app/api/routers/: portfolio.py  questions.py  user.py
api/src/app/api/schemas/: portfolio.py  question.py  user.py
api/src/app/api/services/db/: potrfolio.py  questions.py  session.py  user.py
api/src/app/calculations/: instrument_calc.py  portfilio_risk_calc.py  portfoli_calc.py
api/src/calculations/: portfilio_risk_calc.py
api/src/migrations/: env.py
api/src/migrations/versions/: 231830020bc1_.py  44da04dfe6cb_.py  65442885e87d_.py  690651a2f6d8_.py  828fa50b57fe_.py  868183897650_.py  8e8a11f09b74_.py  b7b9f27c6070_.py  ca84a53c41b6_.py  d18f84dd02b6_add_users_table.py  e3fcd030e724_.py
bot/: .env.dist  app.py  loader.py  pyproject.toml
bot/data/: config.py  text_config.py
bot/handlers/errors/: error_handler.py
bot/handlers/users/: __init__.py  description.py  generate.py  my_portfolio.py  start.py
bot/keyboards/inline/: user_keyboards.py
bot/states/: portfolio_generation.py
bot/utils/: APIManager.py  notify_admins.py
rpa/: .env.example  config.py  main.py  price_parser.py  pyproject.toml
rpa/db/: DBservices.py  models.py
